# fono

./: .gitignore  LICENSE  README.md  eslint.config.mjs  index.html  package.json  vite.config.ts
.github/: release-drafter.yml
.github/workflows/: lint.yml  release-notes.yml  release.yml
src/: app.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: gsmtc.rs  lib.rs  store.rs  tray.rs  window.rs
src/components/: controls.tsx  fono-widget.tsx  icon.tsx  input.tsx  select.tsx  settings.tsx  title-bar.tsx  toggle.tsx
src/context/: settings-context.ts  settings-provider.tsx
src/util/: dynamic-theme.ts  icons.ts  updater.ts
