[package]
name = "fono"
version = "0.0.1"
description = "Display the currently playing media using windows media session"
authors = [ "liqki <contact@liqki.de>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "now_playing_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
windows = { version = "0.61.3", features = [
  "Foundation",
  "Media_Control",
  "Storage_Streams",
] }
base64 = "0.22.1"
image = "0.25.6"
tauri-plugin-store = "2"
once_cell = "1.21.3"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
